syntax = "proto3";

option go_package = "github.com/dawidd6/p2p/pkg/daemon";

import "pkg/torrent/torrent.proto";

service Daemon {
    rpc Add (AddRequest) returns (AddResponse);
}

service Seeder {
    rpc Seed (SeedRequest) returns (SeedResponse);
}

message SeedRequest {
    string file_hash = 1;
    uint64 piece_number = 2;
}

message SeedResponse {
    bytes piece_data = 2;
}

message AddRequest {
    Torrent torrent = 1;
}

message AddResponse {
    Torrent torrent = 1;
}

