syntax = "proto3";

package proto;

option go_package = "github.com/dawidd6/p2p/pkg/proto";

service Tracker {
    rpc Announce (AnnounceRequest) returns (AnnounceResponse);
}

message AnnounceRequest {
}

message AnnounceResponse {
}

