syntax = "proto3";

option go_package = "github.com/dawidd6/p2p/proto";

service Tracker {
    rpc Register (RegisterRequest) returns (RegisterResponse);
}

service Daemon {
    rpc Add (AddRequest) returns (AddResponse);
    rpc Delete (DeleteRequest) returns (DeleteResponse);
}

service Seed {
    rpc Seed (stream SeedRequest) returns (stream SeedResponse);
}

message File {
    string name = 1;
    bytes sha256 = 2;
    repeated Piece pieces = 3;
}

message Peer {
    string address = 1;
    repeated Torrent torrents = 2;
}

message Piece {
    uint64 number = 1;
    bytes sha256 = 2;
}

message Torrent {
    string name = 1;
    int64 timestamp = 2;
    repeated File files = 3;
}

message SeedRequest {
    string torrent_name = 1;
    string file_name = 2;
    uint64 piece_number = 3;
}

message SeedResponse {
    bytes piece_data = 1;
}

message AddRequest {
    Torrent torrent = 1;
}

message AddResponse {
    Torrent torrent = 1;
}

message DeleteRequest {
    Torrent torrent = 1;
}

message DeleteResponse {
    Torrent torrent = 1;
}

message RegisterRequest {
    repeated Torrent torrents = 1;
}

message RegisterResponse {}
